--- a/00note/diary/251017.md
+++ b/00note/diary/251017.md
@@ -6,9 +6,13 @@
 - PC環境
 	- 文字入力切り替え速攻でやりたい
 - 催事
-	- 次回のデータ作成
+	- 次回のデータ一式作成
 - 呉服サイトの修正
 	- 留袖レンタルで必要なこと
 	- 画像ファイル
 	- ルール作り
 	- 修正するときに、ギットハブを用いる
+
+
+## やったこと
+- カーソル勉強と設定
